k8s/k3s/wg-easy/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: wg-easy
  namespace: wg-easy
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`wireguard.devcraft.app`) # change me
      kind: Rule
      services:
        - name: wg-easy-web
          port: 51821
      middlewares:
        - name: default-headers
  tls:
    secretName: devcraft-tls # change me
